--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.notnotme.sketchup"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 13
-        versionName "1.2.1"
+        versionCode 14
+        versionName "1.3.0"
     }
     buildTypes {
         release {
@@ -28,8 +28,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
-    implementation "com.android.support:support-emoji:27.0.2"
-    implementation "com.android.support:support-emoji-bundled:27.0.2"
+    implementation 'com.android.support:support-emoji:27.0.2'
+    implementation 'com.android.support:support-emoji-bundled:27.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
