--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.notnotme.sketchup"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 16
-        versionName "1.3.1"
+        versionCode 17
+        versionName "1.3.5"
     }
     buildTypes {
         release {
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.android.support:support-emoji:27.0.2'
     implementation 'com.android.support:support-emoji-bundled:27.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
 
