--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.android.support:exifinterface:27.1.1"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.jsibbold:zoomage:1.1.0'
     implementation 'android.arch.persistence.room:runtime:1.1.0'
